# adc-linker-agent

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  weekly-audit.yml
.streamlit/: config.toml
adc_linker_agent/: __init__.py
adc_linker_agent/agent/: __init__.py  graph.py  model_factory.py  nodes.py  specialists.py  state.py  synthesizer.py  tools.py
adc_linker_agent/api/: __init__.py  auth.py  models.py  routes.py  server.py
adc_linker_agent/domain/: __init__.py  database.py  enumerator.py  linker_designer.py  literature.py  molecule.py  ph_simulator.py  properties.py  report.py
adc_linker_agent/mcp_tools/: __init__.py  server.py  tool_design.py  tool_linker.py  tool_literature.py  tool_ph.py  tool_property.py  tool_pubchem.py  tool_validate.py
adc_linker_agent/ui/: __init__.py  app.py  components.py  export.py  renderers.py
adc_linker_agent/ui/templates/: slides.html
adc_linker_agent/utils/: __init__.py  audit.py  config.py  validators.py
data/: linker_scaffolds.csv  ph_labile_groups.yaml
docs/: AUTONOMOUS.md
notebooks/: 01_rdkit_intro.ipynb
scripts/: audit.py  debug_deepseek.py  demo.py  import_literature.py  import_pubchem.py
tests/test_agent/: test_graph.py  test_multi_agent_graph.py  test_specialists.py  test_state.py  test_tools.py
tests/test_api/: test_models.py  test_server.py
tests/test_domain/: test_config.py  test_linker_designer.py  test_literature.py  test_molecule.py  test_ph_simulator.py  test_properties.py  test_report.py
tests/test_integration/: test_end_to_end.py
tests/test_mcp_tools/: test_server.py  test_tool_design.py  test_tool_linker.py  test_tool_ph.py  test_tool_property.py  test_tool_validate.py
tests/test_ui/: test_export.py  test_renderers.py
