[project]
name = "adc-linker-agent"
version = "0.1.0"
description = "ADC Linker Intelligent Design AI Agent - Multi-agent system for antibody-drug conjugate linker design"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # Core (Week 1-5)
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=1.0.0",
    "langchain-mcp-adapters>=0.2.0",
    "anthropic>=0.50.0",
    "rdkit-pypi>=2022.9.0",
    "numpy<2.0.0",  # rdkit-pypi 2022 与 NumPy 2.x 不兼容
    "httpx>=0.28.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
    "jupyter>=1.1.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.40.0",
]

[tool.setuptools]
packages = ["adc_linker_agent"]

[tool.setuptools.package-dir]
"adc_linker_agent" = "adc_linker_agent"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
