[project]
name = "adc-linker-agent"
version = "1.1.0"
description = "ADC Linker Intelligent Design AI Agent - Multi-agent system for antibody-drug conjugate linker design"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # Core (Week 1-5) — 上界锁定防止主版本破坏性变更
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "mcp>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<3.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-anthropic>=0.3.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-mcp-adapters>=0.2.0,<1.0.0",
    "anthropic>=0.50.0,<1.0.0",
    "rdkit-pypi>=2022.9.0,<2025.0.0",

    "httpx>=0.28.0,<1.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "PyYAML>=6.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
]
web = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "streamlit>=1.40.0,<2.0.0",
]
viz = [
    "py3Dmol>=2.4.0,<3.0.0",
]
export = [
    "python-pptx>=1.0.0,<2.0.0",
    "Jinja2>=3.0.0,<4.0.0",
]
all = [
    "adc-linker-agent[web]",
    "adc-linker-agent[viz]",
    "adc-linker-agent[export]",
]

[tool.setuptools]
packages = ["adc_linker_agent"]

[tool.setuptools.package-dir]
"adc_linker_agent" = "adc_linker_agent"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"adc_linker_agent/domain/enumerator.py" = ["E501"]
"scripts/import_pubchem.py" = ["E501"]
"scripts/import_literature.py" = ["E501"]
"adc_linker_agent/ui/export.py" = ["E501"]
"adc_linker_agent/ui/templates/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
